syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Go-Marketplace/backend/proto/gen/user;user";

package user;

service User {
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
    rpc GetUsers(GetUsersRequest) returns (UsersResponse);
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc ChangeUserRole(ChangeUserRoleRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message ChangeUserRoleRequest {
    string user_id = 1;
    UserRole role = 2;
}

message UserResponse {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string password = 4;
    string email = 5;
    string address = 6;
    string phone = 7;
    UserRole role = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

enum UserRole {
    GUEST = 0;
    USER = 1;
    ADMIN = 2;
    SUPERADMIN = 3;
}

message CreateUserRequest {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
}

message UpdateUserRequest {
    string user_id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string address = 4;
    optional string phone = 5;
}

message GetUsersRequest {}

message UsersResponse {
    repeated UserResponse users = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {}
